package com.example.ex0251.ex2;

public abstract class Animal {
    public abstract void makeSound();
    public abstract void eat();
}
